--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="description" content="Portfolio webpage of Vinay Somawat" />
       <meta name="keywords"
-          content="portfolio,website,personal website,github,projects,computer science and engineering" />
-      <meta name="author" content="Vinay Somawat" />
+          content="portfolio,website,personal website,github,projects,cloud administration and data science" />
+      <meta name="author" content="Lisa Stanley" />
       <!--Social Media icons-->
       <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -85,17 +85,25 @@
                          data-animate-effect="fadeInLeft">
                         <div class="about-desc">
                            <h1>About</h1>
-                           <p>Hi &#128075; <br>I'm Vinay Somawat. I’m currently working as
-                              a
-                              software engineer@Novopay specialized in
-                              <b>JavaScript Applications</b>. I did my undergrad
-                              in CS from <b>NIT Warangal</b>.
+                           <p>Hello, World &#128075; <br>I'm Lisa. I’m currently studying
+                              cloud administration in Azure with Microsoft, and independently
+                              practicing <b>Python</b> and Powershell automation solutions for 
+                              supporting <b>Azure</b> infrastructure. I completed a Master's
+                              in Leadership (with a Non-Profit Management Concentration) at
+                              <b>Northeastern University</b>. I did this while serving in the Army,
+                              and am retiring after 20 years as leader in positions of escalating
+                              responsibility- and most of all, I'll miss jumping out aircrafts.
                            </p>
-                           <p>I'm a <b>developer</b>, geek and curious human
-                              besides being an OpenSource enthusiast. I have
-                              experience of delivering solutions for interesting
-                              problems from startup and industry space.</p>
-                           <p class="finalText">I love to read, listen to music,
+                           <p>I started coding (in C++) and writing HTML in high-school, and have always
+                              remembered my early passion fondly. I am excited to be returning to the
+                              newly evolved technological landscape as a seasoned learner.</p>
+                           <p>I'm an <b>insatiably curious</b> problem-finder,
+                              solution-seeker, and an OpenSource enthusiast. That's actually what drew me
+                              back to IT; collaboartion, innovation and all aimed at delivering solutions for client
+                              problems; whether startups or large industry leaders. My passion is <b>making an impact</b>
+                           supported through autonomy, transparency, and challenging work. I thrive when given resources
+                           an problem set.</p>
+                           <p class="finalText">I love to read non-fiction, listen to music, meditate,
                               and travel.</p>
                         </div>
                      </div>
@@ -135,20 +143,20 @@
                         </li>
                         <li>
                            <div class="link">
-                              <p style="margin-bottom: 0px">Software Projects
+                              <p style="margin-bottom: 0px">Cloud Projects
                               </p>
                               <i class="fa fa-chevron-down"></i>
                            </div>
-                           <ul id="software-projects" class="submenu">
+                           <ul id="cloud-projects" class="submenu">
                            </ul>
                         </li>
                         <li>
                            <div class="link">
-                              <p style="margin-bottom: 0px">Android Projects
+                              <p style="margin-bottom: 0px">Automation Projects
                               </p>
                               <i class="fa fa-chevron-down"></i>
                            </div>
-                           <ul id="android-projects" class="submenu">
+                           <ul id="automation-projects" class="submenu">
                            </ul>
                         </li>
                         <li>
@@ -182,13 +190,12 @@
                                  <i class="fa fa-code"></i>
                               </div>
                               <div class="timeline-label">
-                                 <h2><a href="#">Novopay Solutions Pvt.
-                                       Ltd.</a>
-                                    <span>June 2020 - Present</span>
+                                 <h2><a href="#">Microsoft's Software and Systems Academy</a>
+                                    <span>January 2022 - Present</span>
                                  </h2>
-                                 <p class="finalText"><strong>Software
-                                       Engineer, SDE
-                                       Intern</strong><br>Supporting
+                                 <p class="finalText"><strong>Server & Cloud
+                                       Administration
+                                       </strong><br><strikethrough>Supporting
                                     client end team for AEPS, DMT, CMS
                                     transactions & working on the
                                     solutions for eKYC, onboarding
@@ -209,7 +216,7 @@
                                  <p class="finalText"><strong>SDE
                                        Intern</strong><br>Developed
                                     Customer Web Application for social
-                                    media management from scratch.</p>
+                                    media management from scratch.</p></strikethrough>
                               </div>
                            </div>
                         </article>
