--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <title>Vinay Somawat</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="Portfolio webpage of Vinay Somawat" />
+      <meta name="description" content="Portfolio webpage of Lisa Stanley" />
       <meta name="keywords"
-          content="portfolio,website,personal website,github,projects,cloud administration and data science" />
+          content="portfolio,website,personal website,github,projects,cloud administration, and data science" />
       <meta name="author" content="Lisa Stanley" />
       <!--Social Media icons-->
       <link rel="stylesheet"
@@ -195,11 +195,11 @@
                                  </h2>
                                  <p class="finalText"><strong>Server & Cloud
                                        Administration
-                                       </strong><br><strikethrough>Supporting
-                                    client end team for AEPS, DMT, CMS
-                                    transactions & working on the
-                                    solutions for eKYC, onboarding
-                                    retailers.</p>
+                                       </strong><br><strikethrough>Selected for
+                                    a demanding technical program developed by Microsoft specifically for veterans,
+                                    focused on Server and Cloud Administration fundamentals
+                                    Developed fluency in Server Administration, Azure Functions
+                                    and Apps, Powershell automation and agile methodologies.</p>
                               </div>
                            </div>
                         </article>
@@ -210,13 +210,13 @@
                                  <i class="fa fa-code"></i>
                               </div>
                               <div class="timeline-label">
-                                 <h2><a href="#">ThinkPedia LLP</a>
-                                    <span>May 2019 - June 2019</span>
+                                 <h2><a href="#">Various Mil Service Assignments</a>
+                                    <span>May 2014-December 2021</span>
                                  </h2>
-                                 <p class="finalText"><strong>SDE
-                                       Intern</strong><br>Developed
-                                    Customer Web Application for social
-                                    media management from scratch.</p></strikethrough>
+                                 <p class="finalText"><strong>Coordinated programs,
+                                    managed personnel, saved money and time for leadership,
+                                    brought deliverables to target with transparency. 
+                                    Worked out a lot.</p></strikethrough>
                               </div>
                            </div>
                         </article>
@@ -249,17 +249,13 @@
                                        <i class="fa fa-code"></i>
                                     </div>
                                     <div class="timeline-label">
-                                       <h2>Bachelors in Computer Science and
-                                          Engineering</h2>
+                                       <h2>Master's in Leadership</h2>
                                        <p class="finalText"><strong>National
                                              Institute of
                                              Technology,
-                                             Warangal</strong><br>Courses
-                                          undertaken Data Structures &
-                                          Algorithms,
-                                          Operating Systems,
-                                          Database Management System,
-                                          Networks.<br>Qualified GATE-2020.</p>
+                                             Boston</strong><br>Non-Profit Management
+                                          Specialisation
+                                          <br>Bachelor's Degree with a Psychology Minor.</p>
                                     </div>
                                  </div>
                               </article>
@@ -283,11 +279,9 @@
                         <div class="about-desc">
                            <h1>Contact</h1>
                         </div>
-                        <p>If you would like to get in touch with me, be it for
-                           exploring a technology, a business, or to just say
-                           hi, feel free to send me an email. My email address
+                        <p>If you would like to get in touch with me, feel free to send me an email. My email address
                            is: <strong><a
-                                  href="mailto: vinaysomawat40@gmail.com">vinaysomawat40@gmail.com</a></strong>
+                                  href="mailto: toutbien@protonmail.com">toutbien@protonmail.com</a></strong>
                         </p>
                      </div>
                      <div id="externalLinks" class="row-image">
@@ -302,16 +296,15 @@
                          data-animate-effect="fadeInLeft">
                         <div class="hire text-center">
                            <p><strong>If you
-                                 like my work and efforts, please consider
-                                 buying me a coffee. Thank you for your
-                                 support!</strong></p>
+                                 are interested in networking, let's meet for a coffee. 
+                              Virtual coffee also accepted!</strong></p>
                            <div>
-                              <a class="bmc-button" target="_blank"
+                              <---<a class="bmc-button" target="_blank"
                                   href="https://www.buymeacoffee.com/r194dME8y"><img
                                      src="images/BMC-btn-logo.svg"><span
                                      class="ml-2">Buy me a
                                     coffee</span></a>
-                           </div>
+                           </div>---->
                         </div>
                      </div>
                   </div>
