--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Vinay Somawat</title>
+      <title>Lisa Stanley</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="description" content="Portfolio webpage of Lisa Stanley" />
       <meta name="keywords"
@@ -51,10 +51,9 @@
                 class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img"
-                      style="background-image: url(images/IMG_-wl1xai.jpg);">
+                      style="background-image: url(https://www-stanli.s3.us-east-2.amazonaws.com/Untitled+design.jpg);">
                   </div>
-                  <h1 id="colorlib-logo"><a href="./index.html">Vinay
-                        Somawat</a>
+                  <h1 id="colorlib-logo"><a href="./index.html">Lisa Stanley</a>
                   </h1>
                </div>
                <nav id="colorlib-main-menu" role="navigation" class="navbar"
@@ -300,7 +299,7 @@
                               Virtual coffee also accepted!</strong></p>
                            <div>
                               <---<a class="bmc-button" target="_blank"
-                                  href="https://www.buymeacoffee.com/r194dME8y"><img
+                                  href="https://www.buymeacoffee.com/toutbien"><img
                                      src="images/BMC-btn-logo.svg"><span
                                      class="ml-2">Buy me a
                                     coffee</span></a>
