--- a/index.html
+++ b/index.html
@@ -84,24 +84,26 @@
                          data-animate-effect="fadeInLeft">
                         <div class="about-desc">
                            <h1>About</h1>
-                           <p>Hello, World &#128075; <br>I'm Lisa. I’m currently studying
-                              cloud administration in Azure with Microsoft, and independently
+                           <p>Hello, World &#128075; <br><br>I'm Lisa. I’m currently studying
+                              cloud administration with Microsoft, and independently
                               practicing <b>Python</b> and Powershell automation solutions for 
                               supporting <b>Azure</b> infrastructure. I completed a Master's
                               in Leadership (with a Non-Profit Management Concentration) at
-                              <b>Northeastern University</b>. I did this while serving in the Army,
-                              and am retiring after 20 years as leader in positions of escalating
-                              responsibility- and most of all, I'll miss jumping out aircrafts.
+                              <b>Northeastern University</b> while serving in the Army. 
+                               Finally, after 20 years as leader in positions of escalating
+                              responsibility-and jumping out aircrafts, I'll be joining the 
+                              civilian sector in 2022.
                            </p>
-                           <p>I started coding (in C++) and writing HTML in high-school, and have always
+                           <p>I started coding (in C++) and writing HTML in high-school, and always
                               remembered my early passion fondly. I am excited to be returning to the
                               newly evolved technological landscape as a seasoned learner.</p>
                            <p>I'm an <b>insatiably curious</b> problem-finder,
-                              solution-seeker, and an OpenSource enthusiast. That's actually what drew me
-                              back to IT; collaboartion, innovation and all aimed at delivering solutions for client
-                              problems; whether startups or large industry leaders. My passion is <b>making an impact</b>
-                           supported through autonomy, transparency, and challenging work. I thrive when given resources
-                           an problem set.</p>
+                              solution-seeker, and an OpenSource enthusiast. IT is about customer service and teamwork,
+                              and what drew me back to IT was my passion for solutions through collaboration,
+                              diversity's impact to innovation and an understanding of client-facing processes;
+                              whether private or public. My passion is <b>making an impact</b> as an autonomous worker, 
+                           supported by transparency, and challenging work. I thrive when given resources, freedom, 
+                              and a problem set.</p> Oh, and <b> coffee</b>
                            <p class="finalText">I love to read non-fiction, listen to music, meditate,
                               and travel.</p>
                         </div>
@@ -115,6 +117,19 @@
                          data-animate-effect="fadeInLeft">
                         <div class="about-desc">
                            <h1>Skills</h1>
+                           Je suis debutante, et j'apprends Python, Powershell, HTML/CSS et le Francais.
+                           <br>I'm a beginner, and I'm learning Python, Powershell, HTML/CSS and French.<bt>
+                        Some of my self-study projects have included:<br>
+                           <ul>
+                              <li>Installing IOS and VMs in my home lab</li>
+                              <li>Working with my Raspberry Pi as a Pi-Hole and Virtual Network manager for my desktop computer</li>
+                              <li>Linux OS and Server practice in my home lab (Linux Mint and Peppermint)</li>
+                              <li>Python for Data Science, and automation</li>
+                              <li>Powershell webhooks, automation functions, and command-line creation of things from GUIs, to node charts</li>
+                              <li>Docker engagements for Azure and AWS interfacing</li>
+                              <li>Kubernetes and AWS infrastructure</li>
+                              <li>and many more things I've failed at!</li>
+                           </ul>
                         </div>
                      </div>
                      <div id="skills" class="row">
@@ -126,6 +141,7 @@
                   <div class="colorlib-narrow-content">
                      <div class="row animate-box fadeInLeft animated"
                          data-animate-effect="fadeInLeft">
+                        
                         <div class="about-desc">
                            <h1>Projects</h1>
                         </div>
