--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
                               supporting <b>Azure</b> infrastructure. I completed a Master's
                               in Leadership (with a Non-Profit Management Concentration) at
                               <b>Northeastern University</b> while serving in the Army. 
-                               Finally, after 20 years as leader in positions of escalating
-                              responsibility-and jumping out aircrafts, I'll be joining the 
-                              civilian sector in 2022.
+                               Finally, after 20 years as a leader in positions of escalating
+                              responsibility -and jumping out multiple aircrafts, I'll be joining the 
+                              civilian world in 2022.
                            </p>
-                           <p>I started coding (in C++) and writing HTML in high-school, and always
+                           <p><b>How I got here:</b> I started coding (in C++) and writing HTML in high-school, and always
                               remembered my early passion fondly. I am excited to be returning to the
                               newly evolved technological landscape as a seasoned learner.</p>
                            <p>I'm an <b>insatiably curious</b> problem-finder,
@@ -118,17 +118,18 @@
                         <div class="about-desc">
                            <h1>Skills</h1>
                            Je suis debutante, et j'apprends Python, Powershell, HTML/CSS et le Francais.
-                           <br>I'm a beginner, and I'm learning Python, Powershell, HTML/CSS and French.<bt>
+                           <br>I'm a beginner, and I'm learning Python, Powershell, HTML/CSS and French.<br>
                         Some of my self-study projects have included:<br>
                            <ul>
-                              <li>Installing IOS and VMs in my home lab</li>
-                              <li>Working with my Raspberry Pi as a Pi-Hole and Virtual Network manager for my desktop computer</li>
-                              <li>Linux OS and Server practice in my home lab (Linux Mint and Peppermint)</li>
+                              <li>Installing Windows and Linux ISOs on PCs, laptops, & VMs in my home lab</li>
+                              <li>Working with my Raspberry Pi as a Pi-Hole and a Virtual Network manager for my desktop computer</li>
+                              <li>Dual-stack IPv4 and IPv6 configurations in Azure from CLI</li>
                               <li>Python for Data Science, and automation</li>
-                              <li>Powershell webhooks, automation functions, and command-line creation of things from GUIs, to node charts</li>
+                              <li>Powershell webhooks, automation, and CLI utilization for creation of GUIs, node charts, pdf printers and file scanners</li>
                               <li>Docker engagements for Azure and AWS interfacing</li>
                               <li>Kubernetes and AWS infrastructure</li>
-                              <li>and many more things I've failed at!</li>
+                              <li>Harvard's CS50x (in progress)</li>
+                              <li>and many more things which I've failed!</li>
                            </ul>
                         </div>
                      </div>
@@ -150,10 +151,10 @@
                          data-animate-effect="fadeInRight">
                         <li>
                            <div class="link">
-                              <p style="margin-bottom: 0px">Web Projects</p>
+                              <p style="margin-bottom: 0px">Data Analysis Projects</p>
                               <i class="fa fa-chevron-down"></i>
                            </div>
-                           <ul id="web-projects" class="submenu">
+                           <ul id="data-analysis" class="submenu">
                            </ul>
                         </li>
                         <li>
@@ -208,7 +209,7 @@
                                  <h2><a href="#">Microsoft's Software and Systems Academy</a>
                                     <span>January 2022 - Present</span>
                                  </h2>
-                                 <p class="finalText"><strong>Server & Cloud
+                                 <p class="finalText"><strong>Cloud
                                        Administration
                                        </strong><br><strikethrough>Selected for
                                     a demanding technical program developed by Microsoft specifically for veterans,
@@ -264,13 +265,14 @@
                                        <i class="fa fa-code"></i>
                                     </div>
                                     <div class="timeline-label">
-                                       <h2>Master's in Leadership</h2>
-                                       <p class="finalText"><strong>National
-                                             Institute of
-                                             Technology,
+                                       <h2>Master of Science in Leadership</h2>
+                                       <p class="finalText"><strong>Northeastern University,
                                              Boston</strong><br>Non-Profit Management
                                           Specialisation
-                                          <br>Bachelor's Degree with a Psychology Minor.</p>
+                                          <h2>Bachelor of Arts</h2>
+                                       <p class="finalText"><strong>Marshall University
+                                             Huntington</strong><br>Regent's BA
+                                          with a Psychology Minor.</p>
                                     </div>
                                  </div>
                               </article>
@@ -314,12 +316,12 @@
                                  are interested in networking, let's meet for a coffee. 
                               Virtual coffee also accepted!</strong></p>
                            <div>
-                              <---<a class="bmc-button" target="_blank"
+                              <-<a class="bmc-button" target="_blank"
                                   href="https://www.buymeacoffee.com/toutbien"><img
                                      src="images/BMC-btn-logo.svg"><span
                                      class="ml-2">Buy me a
                                     coffee</span></a>
-                           </div>---->
+                           </div>->
                         </div>
                      </div>
                   </div>
