--- a/index.html
+++ b/index.html
@@ -269,10 +269,15 @@
                                        <p class="finalText"><strong>Northeastern University,
                                              Boston</strong><br>Non-Profit Management
                                           Specialisation
-                                          <h2>Bachelor of Arts</h2>
+                                    <div class="timeline-entry-inner">
+                                    <div class="timeline-icon color-1">
+                                       <i class="fa fa-code"></i>
+                                    </div>  
+                                       <h2>Bachelor of Arts</h2>
                                        <p class="finalText"><strong>Marshall University
                                              Huntington</strong><br>Regent's BA
                                           with a Psychology Minor.</p>
+                                    </div>
                                     </div>
                                  </div>
                               </article>
