--- a/index.html
+++ b/index.html
@@ -321,12 +321,12 @@
                                  are interested in networking, let's meet for a coffee. 
                               Virtual coffee also accepted!</strong></p>
                            <div>
-                              <-<a class="bmc-button" target="_blank"
+                              <a class="bmc-button" target="_blank"
                                   href="https://www.buymeacoffee.com/toutbien"><img
                                      src="images/BMC-btn-logo.svg"><span
                                      class="ml-2">Buy me a
                                     coffee</span></a>
-                           </div>->
+                           </div>
                         </div>
                      </div>
                   </div>
