--- a/index.html
+++ b/index.html
@@ -229,8 +229,10 @@
                                  <h2><a href="#">Various Mil Service Assignments</a>
                                     <span>May 2014-December 2021</span>
                                  </h2>
-                                 <p class="finalText"><strong>Coordinated programs,
-                                    managed personnel, saved money and time for leadership,
+                                 <p class="finalText">Coordinated programs,
+                                    managed budgets and inventory, led and mentored personnel, 
+                                    saved time by ensuring talent management was well-fed
+                                    <strong>evangelized for strong, culturally diverse leadership</strong>,
                                     brought deliverables to target with transparency. 
                                     Worked out a lot.</p></strikethrough>
                               </div>
@@ -266,18 +268,25 @@
                                     </div>
                                     <div class="timeline-label">
                                        <h2>Master of Science in Leadership</h2>
-                                       <p class="finalText"><strong>Northeastern University,
-                                             Boston</strong><br>Non-Profit Management
+                                       <p class="finalText"><strong>Northeastern University
+                                             </strong><br>Non-Profit Management
                                           Specialisation
-                                    <div class="timeline-entry-inner">
-                                    <div class="timeline-icon color-1">
-                                       <i class="fa fa-code"></i>
-                                    </div>  
-                                       <h2>Bachelor of Arts</h2>
-                                       <p class="finalText"><strong>Marshall University
-                                             Huntington</strong><br>Regent's BA
-                                          with a Psychology Minor.</p>
+                                           </article>
                                     </div>
+                           </div>
+                           <article class="timeline-entry animate-box"
+                            data-animate-effect="fadeInLeft">
+                              <div class="timeline-entry-inner">
+                                 <div class="timeline-icon color-1">
+                                    <i class="fa fa-code"></i>
+                                 </div>
+                              <div class="timeline-label">
+                                 <i class="fa fa-code"></i> 
+                                       <h2>Bachelor of Art</h2>
+                                       <p class="finalText"><strong>Marshall University
+                                            </strong><br>Regent's BA
+                                          with a Psychology Minor</p>
+                                       </div>
                                     </div>
                                  </div>
                               </article>
