--- a/index.html
+++ b/index.html
@@ -117,6 +117,13 @@
                          data-animate-effect="fadeInLeft">
                         <div class="about-desc">
                            <h1>Skills</h1>
+                           <strong>AZ-900<br> Azure Fundamentals
+                              AI-900<br> Artificial Intelligence Fundamentals
+                           </strong>
+                              PL-900 (pending) <br> Power Platform Fundamentals
+                              DP-900 (pending)<br> Data Fundamentals<br>
+                              Microsoft Networking Fundamentals (98-366)<br>
+                              Security + (pending)<br>
                            Je suis debutante, et j'apprends Python, Powershell, HTML/CSS et le Francais.
                            <br>I'm a beginner, and I'm learning Python, Powershell, HTML/CSS and French.<br>
                         Some of my self-study projects have included:<br>
@@ -124,12 +131,12 @@
                               <li>Installing Windows and Linux ISOs on PCs, laptops, & VMs in my home lab</li>
                               <li>Working with my Raspberry Pi as a Pi-Hole and a Virtual Network manager for my desktop computer</li>
                               <li>Dual-stack IPv4 and IPv6 configurations in Azure from CLI</li>
-                              <li>Python for Data Science, and automation</li>
+                              <li>Python for Data Science, and automation (IBM and GOogle certs through Coursera)</li>
                               <li>Powershell webhooks, automation, and CLI utilization for creation of GUIs, node charts, pdf printers and file scanners</li>
                               <li>Docker engagements for Azure and AWS interfacing</li>
                               <li>Kubernetes and AWS infrastructure</li>
                               <li>Harvard's CS50x (in progress)</li>
-                              <li>and many more things which I've failed!</li>
+                              <li>Linux Apache MySQL and Python stack on RPBI for a webserver (in progress)</li>
                            </ul>
                         </div>
                      </div>
