--- a/index.html
+++ b/index.html
@@ -119,18 +119,19 @@
                            <h1>Skills</h1>
                            <strong>AZ-900<br> Azure Fundamentals
                               AI-900<br> Artificial Intelligence Fundamentals
-                           </strong>
-                              PL-900 (pending) <br> Power Platform Fundamentals
+                           </strong><br>
+                              PL-900 (pending) <br> Power Platform Fundamentals<br>
                               DP-900 (pending)<br> Data Fundamentals<br>
                               Microsoft Networking Fundamentals (98-366)<br>
                               Security + (pending)<br>
-                           Je suis debutante, et j'apprends Python, Powershell, HTML/CSS et le Francais.
-                           <br>I'm a beginner, and I'm learning Python, Powershell, HTML/CSS and French.<br>
-                        Some of my self-study projects have included:<br>
+                           <br>
+                           Je suis debutante, et j'apprends Python, Powershell, et le Francais.
+                           <br>I'm a beginner, and I'm learning Python, Powershell, and French.<br><br>
+                           Some of my <strong>self-study projects have included:</strong><br>
                            <ul>
                               <li>Installing Windows and Linux ISOs on PCs, laptops, & VMs in my home lab</li>
                               <li>Working with my Raspberry Pi as a Pi-Hole and a Virtual Network manager for my desktop computer</li>
-                              <li>Dual-stack IPv4 and IPv6 configurations in Azure from CLI</li>
+                              <li>Dual-stack IPv4 and IPv6 configurations in Azure using Docker</li>
                               <li>Python for Data Science, and automation (IBM and GOogle certs through Coursera)</li>
                               <li>Powershell webhooks, automation, and CLI utilization for creation of GUIs, node charts, pdf printers and file scanners</li>
                               <li>Docker engagements for Azure and AWS interfacing</li>
@@ -295,7 +296,6 @@
                                           with a Psychology Minor</p>
                                        </div>
                                     </div>
-                                 </div>
                               </article>
                               <article class="timeline-entry begin animate-box"
                                   data-animate-effect="fadeInBottom">
