--- a/index.html
+++ b/index.html
@@ -279,28 +279,32 @@
                                        <p class="finalText"><strong>Northeastern University
                                              </strong><br>Non-Profit Management
                                           Specialisation
-                                           </article>
                                     </div>
-                                   <h2>Bachelor of Art</h2>
-                                       <p class="finalText"><strong>Marshall University
-                                            </strong><br>Regent's BA
-                                          with a Psychology Minor</p>
-                           </div>
-                           <article class="timeline-entry animate-box"
-                            data-animate-effect="fadeInLeft">
-                              <div class="timeline-entry-inner">
-                                 <div class="timeline-icon color-1">
-                                    <i class="fa fa-code"></i>
-                                 </div>
-                              <article class="timeline-entry begin animate-box"
-                                  data-animate-effect="fadeInBottom">
-                                 <div class="timeline-entry-inner">
-                                    <div class="timeline-icon color-2">
                                     </div>
-                                 </div>
                               </article>
+                        <article class="timeline-entry animate-box"
+                            data-animate-effect="fadeInLeft">
+                           <div class="timeline-entry-inner">
+                              <div class="timeline-icon color-1">
+                                 <i class="fa fa-code"></i>
+                              </div>
+                              <div class="timeline-label">
+                                 <h2><a href="#">Bachelor of Art</a>
+                                    <span>Regent's BA
+                                          with a Psychology Minor</span>
+                                 </h2>
+                                 <p class="finalText">Rugby Club, Take Back the Night Planning Committee,
+                                    Student Buddhist Group.</p></strikethrough>
+                              </div>
                            </div>
-                        </div>
+                        </article>
+                        <article class="timeline-entry begin animate-box"
+                            data-animate-effect="fadeInBottom">
+                           <div class="timeline-entry-inner">
+                              <div class="timeline-icon color-2">
+                              </div>
+                           </div>
+                        </article>
                      </div>
                   </div>
                </section>
