--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                      <div class="row row-bottom-padded-sm animate-box"
                          data-animate-effect="fadeInLeft">
                         <div class="about-desc">
-                           <h1>Skills</h1>
-                           <strong>AZ-900<br> Azure Fundamentals
+                           <h1>Skills</h1><br>
+                           <strong>AZ-900<br> Azure Fundamentals<br>
                               AI-900<br> Artificial Intelligence Fundamentals
                            </strong><br>
                               PL-900 (pending) <br> Power Platform Fundamentals<br>
@@ -316,7 +316,7 @@
                         <div class="about-desc">
                            <h1>Contact</h1>
                         </div>
-                        <p>If you would like to get in touch with me, feel free to send me an email. My email address
+                        <p>If you'd like to get in touch with me, feel free to send me an email. My email address
                            is: <strong><a
                                   href="mailto: toutbien@protonmail.com">toutbien@protonmail.com</a></strong>
                         </p>
@@ -334,7 +334,7 @@
                         <div class="hire text-center">
                            <p><strong>If you
                                  are interested in networking, let's meet for a coffee. 
-                              Virtual coffee also accepted!</strong></p>
+                              Virtual coffee accepted!</strong></p>
                            <div>
                               <a class="bmc-button" target="_blank"
                                   href="https://www.buymeacoffee.com/toutbien"><img
